--- a/app/src/main/res/layout/frame_loading.xml
+++ b/app/src/main/res/layout/frame_loading.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearlayout_frame_loading"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -8,20 +7,23 @@
     android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
-    android:visibility="invisible"
+    android:visibility="visible"
     >
 
 
     <ImageView
+        android:id="@+id/is_loading"
         android:layout_width="117.0dip"
         android:layout_height="188.0dip"
         android:src="@anim/frame_loading_new" />
 
+
     <ImageView
-        android:id="@+id/no_result"
+        android:id="@+id/is_load_error"
         android:layout_width="92.0dip"
         android:layout_height="143.0dip"
         android:layout_gravity="center"
+        android:visibility="gone"
         android:src="@drawable/fail_noresult" />
 
     <TextView
@@ -31,14 +33,7 @@
         android:layout_gravity="bottom|center"
         android:layout_marginTop="20.0dip"
         android:gravity="center"
-        android:text="兔小贰正在努力中.."
+        android:text="正在努力加载中.."
         android:textColor="@color/main_gray"
         android:textSize="@dimen/font_small" />
-
-    <Button
-        android:id="@+id/loading_options"
-        style="@style/PureButtonBigWide"
-        android:layout_marginTop="30.0dip"
-        android:text="去求购"
-        android:textColor="@color/main_gray" />
 </LinearLayout>
