--- a/app/src/main/res/layout/activity_goods_sell_info.xml
+++ b/app/src/main/res/layout/activity_goods_sell_info.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO 商品查询页面-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,8 +8,9 @@
     <RelativeLayout
         android:id="@+id/goods_load_success"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
         <FrameLayout
             android:id="@+id/goods_bootm"
             style="@style/FrameBottom"
@@ -157,12 +159,13 @@
                             android:layout_marginBottom="4.0dip"
                             android:src="@color/main_red" />
 
-                        <ImageView
+                        <com.makeramen.roundedimageview.RoundedImageView
                             android:id="@+id/iv_goods_header"
                             android:layout_width="30.0dip"
                             android:layout_height="30.0dip"
                             android:layout_margin="1.0dip"
-                            android:src="@drawable/header_default" />
+                            android:src="@drawable/header_default"
+                            app:riv_oval="true" />
 
                         <ImageView
                             android:id="@+id/iv_goods_auth"
@@ -421,17 +424,19 @@
             android:id="@+id/goods_title_fl"
             style="@style/FrameTitleWhite">
 
-            <Button
+            <at.markushi.ui.CircleButton
                 android:id="@+id/goods_bt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/back"
+                app:cb_pressedRingWidth="0dp"
+                app:cb_color="#63000000"
+                 />
         </com.example.lzd_develop.sechandtreak.view.widget.TitleBar>
     </RelativeLayout>
 
     <include layout="@layout/frame_loading" />
-
-
 
 
 </RelativeLayout>
