--- a/app/src/main/res/layout/activity_goodsbuyinginfo.xml
+++ b/app/src/main/res/layout/activity_goodsbuyinginfo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO 求购展示页面-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     style="@style/SingleActivity"
     android:orientation="vertical">
 
@@ -32,7 +32,7 @@
 
             <FrameLayout
                 android:layout_width="fill_parent"
-                android:layout_height="0.0dip"
+                android:layout_height="match_parent"
                 android:layout_weight="1.0">
 
                 <ScrollView
@@ -41,7 +41,7 @@
 
                     <LinearLayout
                         android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -76,12 +76,13 @@
                                             android:src="@color/main_red"
                                              />
 
-                                        <ImageView
+                                        <com.makeramen.roundedimageview.RoundedImageView
                                             android:id="@+id/iv_goods_header"
                                             android:layout_width="30.0dip"
                                             android:layout_height="30.0dip"
                                             android:layout_margin="1.0dip"
                                             android:src="@drawable/header_default"
+                                            app:riv_oval="true"
                                             />
 
                                         <ImageView
@@ -94,7 +95,7 @@
                                     </FrameLayout>
 
                                     <TextView
-                                            android:id="@+id/tv_goods_username"
+                                        android:id="@+id/tv_goods_username"
                                         android:layout_width="fill_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_marginLeft="8.0dip"
@@ -200,10 +201,10 @@
 
                         <ListView
                             android:id="@+id/buyinginfo_comment_list"
-                            android:layout_width="fill_parent"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/main_white"
-                            android:scrollbars="none" />
+                             />
                     </LinearLayout>
                 </ScrollView>
 
