--- a/app/src/main/res/layout/fragment_drawback.xml
+++ b/app/src/main/res/layout/fragment_drawback.xml
@@ -7,7 +7,7 @@
     <FrameLayout style="@style/FrameTitleWhite">
 
         <ImageView
-            android:id="@id/title_return"
+            android:id="@+id/title_return"
             style="@style/FrameTitleWhiteButtonTextLeft"
             android:src="@drawable/btn_return_gray_bg" />
 
